# busy_beaver

./: .gitignore  README.md  lazy_beaver.py
.github/workflows/: rust.yml
lazy_beaver/: Cargo.toml
lazy_beaver/benches/: lazy_beaver_limited.rs
lazy_beaver/src/: bin.rs  lib.rs
